--- a/rust_kernel/Cargo.toml
+++ b/rust_kernel/Cargo.toml
@@ -1,20 +1,12 @@
 [package]
-name = "rust_os"
+name = "rust_kernel"
 version = "0.1.0"
 authors = ["Trangar <victor.koenders@gmail.com>"]
 
 [dependencies]
-volatile = "0.2.4"
-spin = "0.4.6"
-x86_64 = "0.2.6"
-uart_16550 = "0.1.0"
 
-[dependencies.lazy_static]
-version = "1.0"
-features = ["spin_no_std"]
+[profile.debug]
+panic = "abort"
 
-[dev-dependencies]
-array-init = "0.0.3"
-
-[package.metadata.bootimage]
-default-target = "rust_os.json"
+[profile.release]
+panic = "abort"
